k8s/flux/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monitoring
    namespace: monitoring
spec:
    ingressClassName: traefik
    rules:
        - host: grafana.enix.thegaragebandofit.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kube-prometheus-stack-grafana
                            port:
                                number: 80
        - host: prometheus.enix.thegaragebandofit.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kube-prometheus-stack-prometheus
                            port:
                                number: 9090
    tls:
        - hosts:
            - grafana.enix.thegaragebandofit.com
            - prometheus.enix.thegaragebandofit.com
